[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.1"
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.40"


[build-dependencies]
prost-build = "0.11.9"

[[example]]
name = "trace_example"
path = "src/examples/trace_example.rs"

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2"
win_etw_macros = { version = "0.1.8", optional = true }
win_etw_provider = { version = "0.1.8", optional = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
# Add any Linux-specific build dependencies here